vlib/v/checker/tests/return_missing_nested.out
vlib/v/checker/tests/return_missing_nested.vv:4:5: notice: condition is always true
    2 | 
    3 | fn foo() string {
    4 |     if true {
      |        ~~~~
    5 |         return ''
    6 |     } else {
vlib/v/checker/tests/return_missing_nested.vv:7:6: notice: condition is always true
    5 |         return ''
    6 |     } else {
    7 |         if true {
      |            ~~~~
    8 |             return ''
    9 |         }
vlib/v/checker/tests/return_missing_nested.vv:3:1: error: missing return at end of function `foo`
    1 | fn main() {}
    2 | 
    3 | fn foo() string {
      | ~~~~~~~~~~~~~~~
    4 |     if true {
    5 |         return ''
